# cardian-hardware

./: .gitignore  .gitmodules
main/: CMakeLists.txt  main.cpp  stm32f103cbt.ld
main/mcu/: mcu.h  timer.h  usart.cpp  usart.h
main/startup/: startup_stm32f103cbtx.s  syscalls.c  sysmem.c  system_stm32f1xx.c
main/utils/: CMakeLists.txt  attachable.h  core.h  neo6m.h  serial.h  sim800.h
notes/: hm-trpw.md  jdy31.md  neo-6m-v2.md  oled091.md  sim800l.2.md  sim800l.3.md  sim800l.md  stm32f103c8t6.2.md  stm32f103c8t6.3.md  stm32f103c8t6.md
remote/: core.h  display.h  helper.h  icon-maker.py  icons.h  remote.ino  transmiter.h
tests/: CMakeLists.txt  timer-test.cpp
